--- a/app/views/dashboard/companies/_company.html.erb
+++ b/app/views/dashboard/companies/_company.html.erb
@@ -1,5 +1,5 @@
 <% provide :title, t("dashboard.companies.list_branch") %>
-<div class="container color_black">
+<div class="container">
   <div class="row">
     <div class="toppad col-md-12" >
       <div class="panel panel-info">
