--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -10,7 +10,7 @@
   </head>
   <body>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-resource.min.js"></script>
-    <div class="icon_header_after_login">
+    <div class="icon-header-after-login">
       <%= link_to "javascript:void(0)", onclick: "App.sidebar('toggle-sidebar');" do %>
         <i class="fa fa-bars fa-fw icon_color_white" ></i>
       <% end %>
