--- a/app/views/request_leaves/index.html.erb
+++ b/app/views/request_leaves/index.html.erb
@@ -1,22 +1,21 @@
 <% provide :title, t("request_leaves.index.title") %>
-<div class="color_black row">
-  <div class="row">
-    <table class="table table-striped table-hover color_black">
-      <thead>
-        <tr>
-          <th><%= t "index" %></th>
-          <th><%= t "time_off_from" %></th>
-          <th><%= t "time_off_to" %></th>
-          <th><%= t "reason" %></th>
-          <th><%= t "action" %></th>
-        </tr>
-      </thead>
-      <tbody>
-        <%= render @request_leaves %>
-      </tbody>
-    </table>
-    <center><%= paginate @request_leaves %></center>
-  </div>
+
+<div class="row">
+  <table class="table table-striped table-hover">
+    <thead>
+      <tr>
+        <th><%= t "index" %></th>
+        <th><%= t "time_off_from" %></th>
+        <th><%= t "time_off_to" %></th>
+        <th><%= t "reason" %></th>
+        <th><%= t "action" %></th>
+      </tr>
+    </thead>
+    <tbody>
+      <%= render @request_leaves %>
+    </tbody>
+  </table>
+  <center><%= paginate @request_leaves %></center>
 </div>
 
 <%= link_to t(".new", default: t("helpers.links.new")),
