--- a/app/views/request_offs/_request_off.html.erb
+++ b/app/views/request_offs/_request_off.html.erb
@@ -10,11 +10,11 @@
   <td><%= request_off.reason %></td>
 
   <td>
-    <%= link_to request_offs_path(request_off) do %>
+    <%= link_to [:edit, request_off] do %>
       <span class="glyphicon glyphicon-edit" %></span>
     <% end %>
 
-    <%= link_to request_off_path(request_off.id),
+    <%= link_to request_off,
       method: :delete, data: {confirm: t("are_you_sure")} do %>
       <span class="glyphicon glyphicon-trash" %></span>
   <% end %>
