--- a/app/views/dashboard/request_leaves/index.html.erb
+++ b/app/views/dashboard/request_leaves/index.html.erb
@@ -1,26 +1,61 @@
 <div class="request-leaves">
-  <div class="user-requests-leaves">
-    <div class="title-request-leaves">
-      <h3 class="text-center"><%= t ".list_request_leave" %></h3>
-    </div>
-    </br>
-    <table class="table table-striped table-hover color_black">
-      <thead>
-        <th class="col-sm-1"><%= t ".no_num" %></th>
-        <th class="col-sm-1"><%= t ".created_at" %></th>
-        <th class="col-sm-1"><%= t ".leave_from" %></th>
-        <th class="col-sm-1"><%= t ".leave_to" %></th>
-        <th class="col-sm-2"><%= t ".reason" %></th>
-        <th class="col-sm-2"><%= t ".compensation" %></th>
-        <th class="col-sm-2"><%= t ".kind_of_leave" %></th>
-        <th class="col-sm-1"><%= t ".time" %></th>
-        <th class="col-sm-1"><%= t ".status" %></th>
-        <th class="col-sm-1"><%= t ".action" %></th>
-      </thead>
-      <tbody>
-        <%= render partial: "request_leave", collection: @request_leaves %>
-      </tbody>
-    </table>
-    <center><%= paginate @request_leaves %></center>
+  <h3 class="text-center"><%= t ".list_request_leave" %></h3>
+  </br>
+  <div class="row">
+    <%= search_form_for [:dashboard, @search], class: "form-inline" do |f| %>
+      <div>
+        <%= f.text_field :user_name_cont, placeholder: t(".staff_name"),
+          class: "form-control search_select colum-text-field-search inline" %>
+        <%= f.select :leave_type_id_eq, options_from_collection_for_select(
+          LeaveType.all, "id", "name", @search.leave_type_id_eq),
+          include_blank: t(".choose_leave_type"), class: "inline" %>
+        <%= f.select :status_eq, @statuses, include_blank: t(".choose_status"),
+          class: "inline" %>
+      </div>
+      </br>
+      <div class="input-daterange">
+        <div class="search-created-at form-group">
+          <div class="form-group">
+            <%= f.label :from, class: "col-sm-2" %>
+            <div class="col-sm-10">
+              <%= f.text_field :created_at_gteq, placeholder: t(".create_from"),
+              class: "form-control search_select colum-text-field-search" %></div>
+          </div>
+        </div>
+        <div class="search-created-at">
+          <div class="form-group">
+            <%= f.label :to, class: "col-sm-2" %>
+            <div class="col-sm-10">
+              <%= f.text_field :created_at_lteq, placeholder: t(".create_to"),
+              class: "form-control search_select colum-text-field-search" %></div>
+            </div>
+        </div>
+      </div>
+      <%= f.submit t(".search"), class: "btn btn-info margin_left_btn_submit" %>
+    <% end %>
   </div>
+  </br>
+  <table class="table table-striped table-hover color_black">
+    <thead>
+      <th class="col-sm-1"><%= t ".no_num" %></th>
+      <th class="col-sm-1">
+        <%= sort_link @search, :created_at, t(".created_at") %>
+      </th>
+      <th class="col-sm-1"><%= t ".leave_from" %></th>
+      <th class="col-sm-1"><%= t ".leave_to" %></th>
+      <th class="col-sm-2"><%= t ".reason" %></th>
+      <th class="col-sm-2"><%= t ".compensation" %></th>
+      <th class="col-sm-2">
+        <%= sort_link @search, "users.name", t(".staff_name") %>
+      </th>
+      <th class="col-sm-2"><%= t ".kind_of_leave" %></th>
+      <th class="col-sm-1"><%= t ".time" %></th>
+      <th class="col-sm-1"><%= t ".status" %></th>
+      <th class="col-sm-1"><%= t ".action" %></th>
+    </thead>
+    <tbody>
+      <%= render(partial: "request_leave", collection: @request_leaves) || t(".no_reqquest_leave_display") %>
+    </tbody>
+  </table>
+  <center><%= paginate @request_leaves %></center>
 </div>
