--- a/app/views/dashboard/request_offs/index.html.erb
+++ b/app/views/dashboard/request_offs/index.html.erb
@@ -1,5 +1,5 @@
 <% provide :title, t("request_offs.index.title") %>
-
+<h3 class="text-center"><%= t ".title" %></h3>
 <div class="row">
   <table class="table table-striped table-hover">
     <thead>
