--- a/app/views/dashboard/request_offs/index.html.erb
+++ b/app/views/dashboard/request_offs/index.html.erb
@@ -1,10 +1,40 @@
-<% provide :title, t("request_offs.index.title") %>
+<% provide :title, t(".title") %>
 <h3 class="text-center"><%= t ".title" %></h3>
+<div class="request-offss">
+  <div class="row">
+    <%= search_form_for [:dashboard, @search], class: "form-inline" do |f| %>
+      <div>
+        <%= f.text_field :user_name_cont, placeholder: t(".staff_name"),
+          class: "form-control search_select" %>
+        <%= f.select :status_eq, @statuses, include_blank: t(".choose_status") %>
+      </div>
+      </br>
+      <div class="input-daterange">
+        <div class="form-group">
+          <%= f.label :from, class: "col-sm-2" %>
+          <div class="col-sm-10">
+            <%= f.text_field :created_at_gteq, placeholder: t(".create_from"),
+            class: "form-control search_select" %></div>
+        </div>
+        <div class="form-group">
+          <%= f.label :to, class: "col-sm-2" %>
+          <div class="col-sm-10">
+            <%= f.text_field :created_at_lteq, placeholder: t(".create_to"),
+            class: "form-control search_select" %></div>
+        </div>
+      </div>
+      <%= f.submit t(".search"), class: "btn btn-info" %>
+    <% end %>
+  </div>
+  </br>
+</div>
 <div class="row">
   <table class="table table-striped table-hover">
     <thead>
       <tr>
         <th><%= t "index" %></th>
+        <th><%= sort_link @search, :created_at, t(".created_at") %></th>
+        <th><%= sort_link @search, "users.name", t(".staff_name") %></th>
         <th><%= t "time_off_from" %></th>
         <th><%= t "time_off_to" %></th>
         <th><%= t "reason" %></th>
@@ -12,7 +42,7 @@
       </tr>
     </thead>
     <tbody>
-      <%= render partial: "request_off", collection: @request_offs %>
+      <%= render(partial: "request_off", collection: @request_offs) || t(".no_request_off_displayed") %>
     </tbody>
   </table>
   <center><%= paginate @request_offs %></center>
