--- a/app/views/personal_issues/index.html.erb
+++ b/app/views/personal_issues/index.html.erb
@@ -1,1 +1,23 @@
-index.html.erb
+<% provide :title, t("personal_issues.index.title") %>
+
+<div class="row">
+  <table class="table table-striped table-hover">
+    <thead>
+      <tr>
+        <th><%= t "index" %></th>
+        <th><%= t "time_off_from" %></th>
+        <th><%= t "time_off_to" %></th>
+        <th><%= t "reason" %></th>
+        <th><%= t "action" %></th>
+      </tr>
+    </thead>
+    <tbody>
+      <%= render @personal_issues %>
+    </tbody>
+  </table>
+  <center><%= paginate @personal_issues %></center>
+</div>
+
+<%= link_to t(".new", default: t("helpers.links.new")),
+  new_request_off_path,
+  class: "btn btn-primary" %>
