--- a/app/views/dashboard/workspaces/edit.html.erb
+++ b/app/views/dashboard/workspaces/edit.html.erb
@@ -6,16 +6,16 @@
 <body onload="init()">
   <div id="sample">
     <div class="workspace">
-      <span class="work_span">
+      <span class="work-span">
         <div id="accordion">
           <h4><%= t "dashboard.workspaces.edit.item" %></h4>
           <div>
-            <div id="myPaletteSmall" class="myPalet"></div>
+            <div id="myPaletteSmall" class="my-palet"></div>
           </div>
         </div>
       </span>
-      <span class="myDiagram">
-        <div id="myDiagramDiv" class="gDiv"></div>
+      <span class="my-diagram">
+        <div id="myDiagramDiv" class="g-div"></div>
       </span>
     </div>
     <div>
