--- a/app/views/dashboard/workspaces/show.html.erb
+++ b/app/views/dashboard/workspaces/show.html.erb
@@ -6,8 +6,8 @@
   <body onload="init()">
     <div id="sample">
       <div>
-        <span class="myDiagra">
-          <div id="myDiagramDiv" class="myDiagraDiv"></div>
+        <span class="my-diagra">
+          <div id="myDiagramDiv" class="my-diagra-div"></div>
         </span>
       </div>
     </div>
