--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="footer row-back">
+<div class="footer">
   <div class="w-container wrap-normal center">
     <%= t "year" %>
     <strong><%= t "by_education_framgia" %></strong>
