--- a/app/assets/stylesheets/timesheets.scss
+++ b/app/assets/stylesheets/timesheets.scss
@@ -12,14 +12,6 @@ $color-red: #f00;
   overflow-y: hidden;
 }
 
-.mg-top-50 {
-  margin-top: 50px !important;
-}
-
-.mg-top-20 {
-  margin-top: 20px;
-}
-
 .time-in {
   border: 1px solid $color-dd;
   float: left;
@@ -45,15 +37,15 @@ $color-red: #f00;
 }
 
 .brg-red {
-  background: $color-red !important;
+  background: $color-red;
 }
 
 .brg-blue {
-  background: $color-3f !important;
+  background: $color-3f;
 }
 
 .bg-green {
-  background: $color-0f !important;
+  background: $color-0f;
 }
 
 .bg-dark-gray {
@@ -65,11 +57,11 @@ $color-red: #f00;
 }
 
 .bg-orange {
-  background: $color-f6 !important;
+  background: $color-f6;
 }
 
 .pg-blue-line {
-  background: $color-f7 !important;
+  background: $color-f7;
 }
 
 .inner {
@@ -134,5 +126,5 @@ $color-red: #f00;
 }
 
 .pd-left-120 {
-  padding-right: 0px;
+  padding-right: 0;
 }
