--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -1,47 +1,81 @@
-<div class="form_center">
-  <%= form_for [:admin, @user] do |f| %>
-    <%= render "shared/error_messages", object: f.object %>
-    <div class="field">
-      <%= f.label :name %>
-      <%= f.text_field :name, class: "form-control" %>
-    </div>
-    <div class="field">
-      <%= f.label :gender %>
-      <%= f.select :gender, User.genders.keys %>
-    </div>
-    <div class="field">
-      <%= f.label :birthday %>
-      <%= t "example_date" %>
-      <%= f.date_field :birthday %>
-    </div>
-    <div class="field">
-      <%= f.label :avatar %>
-      <%= f.file_field :avatar, accept: Settings.image_format_accept %>
-    </div>
-    <div class="field">
-      <%= f.label :role %>
-      <%= f.select :role, User.roles.keys %>
-    </div>
-    <div class="field">
-      <%= f.label :email %>
-      <%= f.email_field :email, class: "form-control" %>
-    </div>
-    <% if @user.id.blank? %>
-      <div class="field">
-        <%= f.label :password %>
-        <em>
-          <%= t "open_parenthesis" %> <%= Settings.min_password %>
-          <%= t "characters_minimum" %> <%= t "close_parenthesis" %>
-        </em>
-        <%= f.password_field :password, class: "form-control" %>
+<%= form_for [:admin, @user], class: "col-md-6 col-md-offset-3" do |f| %>
+  <%= render "shared/error_messages", object: f.object %>
+  <div class="form-group">
+    <div class="row">
+      <div class="col-md-6">
+        <%= f.label :name %>
+        <%= f.text_field :name, class: "form-control" %>
       </div>
-      <div class="field">
-        <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, class: "form-control" %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <div class="row">
+      <div class="col-md-6">
+        <%= f.label :gender %>
+        <%= f.select :gender, User.genders.keys, {}, class: "form-control" %>
       </div>
-    <% end %>
-    <div class="field">
-      <%= f.submit yield(:button_text), class: "btn btn-primary" %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <div class="row">
+      <div class="col-md-6">
+        <%= f.label :birthday %>
+        <%= t "example_date" %>
+        <%= f.date_field :birthday, class: "form-control" %>
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :avatar %>
+    <%= f.file_field :avatar, accept: Settings.image_format_accept %>
+  </div>
+
+  <div class="form-group">
+    <div class="row">
+      <div class="col-md-6">
+        <%= f.label :role %>
+        <%= f.select :role, User.roles.keys, {}, class: "form-control" %>
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <div class="row">
+      <div class="col-md-6">
+        <%= f.label :email %>
+        <%= f.email_field :email, class: "form-control" %>
+      </div>
+    </div>
+  </div>
+
+  <% if @user.new_record? %>
+    <div class="form-group">
+      <div class="row">
+        <div class="col-md-6">
+          <%= f.label :password %>
+          <em>
+            <%= t "open_parenthesis" %> <%= Settings.min_password %>
+            <%= t "characters_minimum" %> <%= t "close_parenthesis" %>
+          </em>
+          <%= f.password_field :password, class: "form-control" %>
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div class="row">
+        <div class="col-md-6">
+          <%= f.label :password_confirmation %>
+          <%= f.password_field :password_confirmation, class: "form-control" %>
+        </div>
+      </div>
     </div>
   <% end %>
-</div>
+
+  <div class="form-group">
+    <%= f.submit yield(:button_text), class: "btn btn-primary" %>
+  </div>
+<% end %>
