--- a/app/views/dashboard/projects/_form.html.erb
+++ b/app/views/dashboard/projects/_form.html.erb
@@ -1,20 +1,21 @@
-<div class="form_center">
-  <%= form_for [:dashboard, @project] do |f| %>
-    <%= render "shared/error_messages", object: f.object %>
-    <div class="field">
-      <%= f.label :name %>
-      <%= f.text_field :name, class: "form-control" %>
-    </div>
-    <div class="field">
-      <%= f.label :start_date %>
-      <%= f.date_field :start_date %>
-    </div>
-    <div class="field">
-      <%= f.label :end_date %>
-      <%= f.date_field :end_date %>
-    </div>
-    <div class="field">
-      <%= f.submit yield(:button_text), class: "btn btn-primary" %>
-    </div>
-  <% end %>
-</div>
+<%= form_for [:dashboard, @project], class: "col-md-6 col-md-offset-3" do |f| %>
+  <%= render "shared/error_messages", object: f.object %>
+  <div class="form-group">
+    <%= f.label :name %>
+    <%= f.text_field :name, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :start_date %>
+    <%= f.date_field :start_date, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :end_date %>
+    <%= f.date_field :end_date, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.submit yield(:button_text), class: "btn btn-primary" %>
+  </div>
+<% end %>
