--- a/app/views/dashboard/request_leaves/index.html.erb
+++ b/app/views/dashboard/request_leaves/index.html.erb
@@ -1,41 +1,42 @@
-<div class="request-leaves">
-  <h3 class="text-center"><%= t ".list_request_leave" %></h3>
-  </br>
-  <div class="row">
-    <%= search_form_for [:dashboard, @search], class: "form-inline" do |f| %>
-      <div>
-        <%= f.text_field :user_name_cont, placeholder: t(".staff_name"),
-          class: "form-control search_select colum-text-field-search inline" %>
-        <%= f.select :leave_type_id_eq, options_from_collection_for_select(
-          LeaveType.all, "id", "name", @search.leave_type_id_eq),
-          include_blank: t(".choose_leave_type"), class: "inline" %>
-        <%= f.select :status_eq, @statuses, include_blank: t(".choose_status"),
-          class: "inline" %>
-      </div>
-      </br>
-      <div class="input-daterange">
-        <div class="search-created-at form-group">
-          <div class="form-group">
-            <%= f.label :from, class: "col-sm-2" %>
-            <div class="col-sm-10">
-              <%= f.text_field :created_at_gteq, placeholder: t(".create_from"),
-              class: "form-control search_select colum-text-field-search" %></div>
-          </div>
-        </div>
-        <div class="search-created-at">
-          <div class="form-group">
-            <%= f.label :to, class: "col-sm-2" %>
-            <div class="col-sm-10">
-              <%= f.text_field :created_at_lteq, placeholder: t(".create_to"),
-              class: "form-control search_select colum-text-field-search" %></div>
-            </div>
-        </div>
-      </div>
-      <%= f.submit t(".search"), class: "btn btn-info margin_left_btn_submit" %>
-    <% end %>
+<h3 class="text-center"><%= t ".list_request_leave" %></h3>
+<%= search_form_for [:dashboard, @search], class: "col-md-12" do |f| %>
+  <div class="form-group col-md-2">
+    <%= f.text_field :user_name_cont,
+      placeholder: t(".staff_name"),
+      class: "form-control" %>
   </div>
-  </br>
-  <table class="table table-striped table-hover color_black">
+
+  <div class="form-group col-md-2">
+    <%= f.select :leave_type_id_eq,
+      options_from_collection_for_select(LeaveType.all,
+        "id", "name", @search.leave_type_id_eq),
+      {include_blank: t(".choose_leave_type")}, class: "form-control" %>
+  </div>
+
+  <div class="form-group col-md-2">
+    <%= f.select :status_eq, @statuses,
+      {include_blank: t(".choose_status")},
+      class: "form-control" %>
+  </div>
+
+  <div class="form-group col-md-2">
+    <%= f.date_field :created_at_gteq,
+      placeholder: t(".create_from"),
+      class: "form-control" %>
+  </div>
+
+  <div class="form-group col-md-2">
+    <%= f.date_field :created_at_lteq,
+      placeholder: t(".create_to"),
+      class: "form-control" %></div>
+
+  <div class="form-group col-md-2">
+    <%= f.submit t(".search"), class: "btn btn-primary" %>
+  </div>
+<% end %>
+
+<div class="col-md-12">
+  <table class="table table-striped table-hover">
     <thead>
       <th class="col-sm-1"><%= t ".no_num" %></th>
       <th class="col-sm-1">
