--- a/app/views/dashboard/request_offs/index.html.erb
+++ b/app/views/dashboard/request_offs/index.html.erb
@@ -1,34 +1,33 @@
 <% provide :title, t(".title") %>
 <h3 class="text-center"><%= t ".title" %></h3>
-<div class="request-offss">
-  <div class="row">
-    <%= search_form_for [:dashboard, @search], class: "form-inline" do |f| %>
-      <div>
-        <%= f.text_field :user_name_cont, placeholder: t(".staff_name"),
-          class: "form-control search_select" %>
-        <%= f.select :status_eq, @statuses, include_blank: t(".choose_status") %>
-      </div>
-      </br>
-      <div class="input-daterange">
-        <div class="form-group">
-          <%= f.label :from, class: "col-sm-2" %>
-          <div class="col-sm-10">
-            <%= f.text_field :created_at_gteq, placeholder: t(".create_from"),
-            class: "form-control search_select" %></div>
-        </div>
-        <div class="form-group">
-          <%= f.label :to, class: "col-sm-2" %>
-          <div class="col-sm-10">
-            <%= f.text_field :created_at_lteq, placeholder: t(".create_to"),
-            class: "form-control search_select" %></div>
-        </div>
-      </div>
-      <%= f.submit t(".search"), class: "btn btn-info" %>
-    <% end %>
+
+<%= search_form_for [:dashboard, @search], class: "col-md-12" do |f| %>
+  <div class="col-md-2 form-group">
+    <%= f.text_field :user_name_cont, placeholder: t(".staff_name"),
+      class: "form-control" %>
   </div>
-  </br>
-</div>
-<div class="row">
+
+  <div class="col-md-2 form-group">
+    <%= f.select :status_eq, @statuses,
+      {include_blank: t(".choose_status")}, class: "form-control" %>
+  </div>
+
+  <div class="col-md-2 form-group">
+    <%= f.date_field :created_at_gteq, placeholder: t(".create_from"),
+      class: "form-control" %>
+  </div>
+
+  <div class="col-md-2 form-group">
+    <%= f.date_field :created_at_lteq, placeholder: t(".create_to"),
+      class: "form-control" %>
+  </div>
+
+  <div class="col-md-2 form-group">
+    <%= f.submit t(".search"), class: "btn btn-primary" %>
+  </div>
+<% end %>
+
+<div class="col-md-12">
   <table class="table table-striped table-hover">
     <thead>
       <tr>
