--- a/app/views/request_leaves/index.html.erb
+++ b/app/views/request_leaves/index.html.erb
@@ -8,6 +8,7 @@
         <th><%= t "time_off_from" %></th>
         <th><%= t "time_off_to" %></th>
         <th><%= t "reason" %></th>
+        <th><%= t "status" %></th>
         <th><%= t "action" %></th>
       </tr>
     </thead>
