--- a/app/views/personal_issues/edit.html.erb
+++ b/app/views/personal_issues/edit.html.erb
@@ -1,5 +1,7 @@
 <% provide :title, t("request_offs.new.personal.title") %>
 
-<h3 class="text-center"><%= t "request_offs.new.personal.title" %></h3>
+<h3 class="text-center">
+  <%= t "request_offs.new.personal.title" %>
+</h3>
 
 <%= render "form" %>
