--- a/app/views/request_leaves/edit.html.erb
+++ b/app/views/request_leaves/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
   <h1 class="text-center">
-    <%= t ".title", default: [:"helpers.titles.new", "New %{model}"],
+    <%= t ".title", default: [:"helpers.titles.new", "Edit %{model}"],
       model: RequestLeave.model_name.human.titleize %>
   </h1>
 </div>
