--- a/app/views/request_offs/new.html.erb
+++ b/app/views/request_offs/new.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h1>
+  <h1 class="text-center">
     <%= t ".title", default: [:"helpers.titles.new", "New %{model}"],
       model: RequestOff.model_name.human.titleize %>
   </h1>
