show remaining time dayoffs

--- a/app/views/request_offs/index.html.erb
+++ b/app/views/request_offs/index.html.erb
@@ -13,6 +13,8 @@
     </tr>
   </thead>
   <tbody>
+    <p><%= t("request_offs.index.you_have_time_request",
+      remain: @user_dayoff.nil? ? 0 : @user_dayoff.remain) %></p>
     <%= render(partial: "request_off", collection: @request_offs) || t(".no_request_off_displayed") %>
   </tbody>
 </table>
