--- a/app/views/dashboard/personal_issues/index.html.erb
+++ b/app/views/dashboard/personal_issues/index.html.erb
@@ -1,13 +1,14 @@
-<% provide :title, t("personal_issues.index.title") %>
+<% provide :title, t(".title") %>
+<h3 class="text-center"><%= t ".title" %></h3>
 
 <table class="table table-striped table-hover">
   <thead>
     <tr>
-      <th><%= t "index" %></th>
-      <th><%= t "time_off_from" %></th>
-      <th><%= t "time_off_to" %></th>
-      <th><%= t "reason" %></th>
-      <th><%= t "action" %></th>
+      <th><%= t ".index" %></th>
+      <th><%= t ".time_off_from" %></th>
+      <th><%= t ".time_off_to" %></th>
+      <th><%= t ".reason" %></th>
+      <th><%= t ".status" %></th>
     </tr>
   </thead>
   <tbody>
